--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,7 +1,4 @@
 .products__card {
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
   padding: 27px 20px 20px 30px;
 }
-
-
-
